<resources>
    <string name="app_name">WatchOut</string>
    <string name="app_title">Watch Out!</string>
    <string name="btn_start">Start</string>
    <string name="btn_stop">Stop</string>
    <string name="settings">Settings</string>
    <string name="distance">Distance</string>
    <string name="min_distance">160m</string>
    <string name="max_distance">500m</string>
    <string name="alert_option">Alert</string>
    <string name="vibrate">Vibrate</string>
    <string name="sound">Sound</string>
    <string name="tts">Text To Speech</string>
    <string name="title_activity_maps">Map</string>
    <string name="meter">m</string>
    <string name="near_school">Watch out! School nearby.</string>
    <string name="exiting_school">Exiting school zone</string>
    <string name="tts_utterance_id">tts1</string>
    <string name="tts_utterance_id2">tts2</string>
</resources>
