<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#f2f2f2"
    android:padding="20dp">

    <LinearLayout
        android:layout_width="371dp"
        android:layout_height="wrap_content">

        <ImageButton
            android:id="@+id/back_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginTop="10dp"
            android:background="@null"
            android:onClick="clickBack"
            app:srcCompat="@drawable/back_icon" />

        <TextView
            android:id="@+id/settings_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="95dp"
            android:text="@string/settings"
            android:textSize="30sp" />

    </LinearLayout>

    <TextView
        android:id="@+id/distance_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:text="@string/distance" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/customerborder">
            <TextView
                android:id="@+id/min_distance"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/min_distance"/>
            <SeekBar
                android:id="@+id/distance_seekbar"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="10"/>
            <TextView
                android:id="@+id/max_distance"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/max_distance" />
        </LinearLayout>

        <EditText
            android:id="@+id/distance_selected"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:inputType="numberSigned"
            android:text="750"/>

    <TextView
        android:id="@+id/alertText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_margin="10dp"
        android:text="@string/alert_option" />

    <RadioGroup
        android:id="@+id/alertOption"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:background="@drawable/customerborder">

        <RadioButton
            android:id="@+id/sound_option"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sound"
            android:onClick="onRadioButtonClicked"/>

        <RadioButton
            android:id="@+id/vibrate_option"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/vibrate"
            android:onClick="onRadioButtonClicked"/>

        <RadioButton
            android:id="@+id/tts_option"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tts"
            android:onClick="onRadioButtonClicked"/>
    </RadioGroup>
</LinearLayout>